--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Yuting Ji</h1>
-							<p>Data Science, Deep Learning<br>
-								Former Signed Music Producer, in the name of <a href="#">Eastrover</a></p>
+							<p>Data Sciencist<br>
+								Deep Learning <a href="https://donglaiw.github.io/">Lab Member</a><br>
+								Former signed <a href="https://open.spotify.com/track/7zQXmSSXr7qQQtBmFSBw4u?si=e40be09e8a0c45a0">Music Producer</a> </p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">More about me</a></li>
 							</ul>
@@ -46,83 +47,102 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/anatomics_demo.png" alt="" data-position="25% center" /></a>
 							<div class="content">
+								<p><h1>Past Projects</h1></p>
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<date>July 2023</date>
+									<h2>Anatomics MLT</h2>
+									<p>A deep learning software for cytology instance segmentation tasks<br><br>
+										In collaboration with Professor Michael Knoblauch and Michael Knoblauch Lab members from Washington State University<br><br>
+										Expect to publish in <a href="https://www.nature.com/nmeth/">Nature Methods</a><br></p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
+
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/twitter_demo.jpeg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<date>Fall 2022</date>
+									<h2>Twitter and Mastodon Investigation</h2>
+									<p>Analyzed and investigated the aftereffect of Twitter acquisition. We first use an NLP model to conduct sentiment analysis to see why people leave Twitter. Then we use the SIR compartmental model to model Mastodon users. Finally we use the Long Short-Term Memory(LSTM) model to predict Mastodon's future user growth trend.
+									</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
+
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/teethseg_demo.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<date>Spring 2022</date>
+									<h2>Teeth Segmentation</h2>
+									<p>A deep learning pipeline for X-ray teeth instance segmentation with Residual Unet backbone and 90% accuracy</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
+
+						<section>
+							<a href="#" class="image"><img src="images/miniprogram_demo3.png" alt="" data-position="left center" /></a>
+							<div class="content">
+								<div class="inner">
+									<date>Spring 2022</date>
+									<h2>Course Recommendation Mini Program</h2>
+									<p>A front end application for offering course rating and recommendation to Chinese international students in Boston College<br><br>
+										Deployed on WeChat ecosystem as a WeChat Mini Program</p>
+									<ul class="actions">
+										<li><a href="#" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+
+						<section>
+							<a href="#" class="image"><img src="images/autoinvest_demo.jpg" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<date>Fall 2021</date>
+									<h2>Auto Investment Portfolio</h2>
+									<p>A financial analysis program with Tkinter graphical user interface to find the best long and short investing pair in a given industry from the S&P 500 index</p>
+									<ul class="actions">
+										<li><a href="#" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+
 					</section>
 
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
-							<div class="features">
+							<h2>Past Music</h2>
+							<p></p>
+							<!-- <div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
+									<span class="icon major fa-gem"></span>
+									<span class="icon solid major fa-lock"></span>
+									<span class="icon solid major fa-cog"></span>
+									<span class="icon solid major fa-desktop"></span>
+									<span class="icon solid major fa-link"></span>
 									<h3>Lorem ipsum amet</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
-								<section>
-									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-							</div>
-							<ul class="actions">
+							</div> -->
+							<!-- <ul class="actions">
 								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
+							</ul> -->
 						</div>
 					</section>
 
