--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
 					</section>
 
 				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
+					<!-- <section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Past Music</h2>
-							<p></p>
+							<p></p> -->
 							<!-- <div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
@@ -143,8 +143,8 @@
 							<!-- <ul class="actions">
 								<li><a href="generic.html" class="button">Learn more</a></li>
 							</ul> -->
-						</div>
-					</section>
+						<!-- </div>
+					</section> -->
 
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
