--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<ul>
 							<li><a href="#intro">Me</a></li>
 							<li><a href="#one">Data Science</a></li>
-							<li><a href="#two">Music Production</a></li>
+							<!-- <li><a href="#two">Music Production</a></li> -->
 							<li><a href="#three">Contact</a></li>
 						</ul>
 					</nav>
@@ -36,8 +36,8 @@
 						<div class="inner">
 							<h1>Yuting Ji</h1>
 							<p>Data Sciencist<br>
-								Deep Learning <a href="https://donglaiw.github.io/">Lab Member</a><br>
-								Former signed <a href="https://open.spotify.com/track/7zQXmSSXr7qQQtBmFSBw4u?si=e40be09e8a0c45a0">Music Producer</a> </p>
+								Deep Learning <a href="https://donglaiw.github.io/">Researcher</a><br>
+								Signed <a href="https://open.spotify.com/track/7zQXmSSXr7qQQtBmFSBw4u?si=e40be09e8a0c45a0">Music Producer</a> </p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">More about me</a></li>
 							</ul>
