--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Me</a></li>
-							<li><a href="#one">Data Science</a></li>
-							<!-- <li><a href="#two">Music Production</a></li> -->
+							<li><a href="#one">Projects</a></li>
+							<li><a href="#two">Music</a></li>
 							<li><a href="#three">Contact</a></li>
 						</ul>
 					</nav>
 				</div>
 			</section>
 
-			
 		<!-- Wrapper -->
 			<div id="wrapper">
 
@@ -121,14 +120,16 @@
 								</div>
 							</div>
 						</section>
-
 					</section>
 
 				<!-- Two -->
-					<!-- <section id="two" class="wrapper style3 fade-up">
+					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>Past Music</h2>
-							<p></p> -->
+							<h2>Past Music</h2><br>
+							<p>
+								<a href="https://music.163.com/#/artist?id=12227403" class="button medium">Netease Cloud Music  (China)</a> <br><br>
+								<a href="https://open.spotify.com/track/7zQXmSSXr7qQQtBmFSBw4u?si=e40be09e8a0c45a0" class="button medium">Spotify  (International)</a> 
+							</p> 
 							<!-- <div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
@@ -144,8 +145,8 @@
 							<!-- <ul class="actions">
 								<li><a href="generic.html" class="button">Learn more</a></li>
 							</ul> -->
-						<!-- </div>
-					</section> --> 
+						</div>
+					</section> 
 
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
@@ -170,7 +171,7 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="#" class="button submit">Send Message</a></li>
+											<li><a href="seizetimejay@gmail.com" class="button submit">Send Message</a></li>
 										</ul>
 									</form>
 								</section>
@@ -205,7 +206,6 @@
 							</div>
 						</div>
 					</section>
-
 			</div>
 
 		<!-- Footer -->
