--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
 							<h1>Yuting Ji</h1>
 							<p>Data Sciencist<br>
 								Deep Learning <a href="https://donglaiw.github.io/">Researcher</a><br>
-								Signed <a href="https://open.spotify.com/track/7zQXmSSXr7qQQtBmFSBw4u?si=e40be09e8a0c45a0">Music Producer</a> </p>
+								Signed <a href="https://open.spotify.com/track/7zQXmSSXr7qQQtBmFSBw4u?si=e40be09e8a0c45a0">Music Producer</a> 
+							</p>
+							<ul class="icons">
+								<li><a href="https://linkedin.com/in/yuting-ji-7a63001b5/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/jytjyt05" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							</ul>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">More about me</a></li>
 							</ul>
@@ -52,12 +57,16 @@
 								<p><h1>Past Projects</h1></p>
 								<div class="inner">
 									<date>July 2023</date>
-									<h2>Anatomics MLT</h2>
+									<p>
+										<h2>Anatomics MLT</h2>
+										<h5>Yuting Ji, Aaron Brookhouse</h5>
+									</p>
 									<p>A deep learning software for cytology instance segmentation tasks<br><br>
 										In collaboration with Professor Michael Knoblauch and Michael Knoblauch Lab members from Washington State University<br><br>
-										Expect to publish in <a href="https://www.nature.com/nmeth/">Nature Methods</a><br></p>
+										Expect to publish in <a href="https://www.nature.com/nmeth/">Nature Methods</a><br>
+									</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="https://github.com/ajbrookhouse/WSU_PlantBio_ML" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -68,11 +77,14 @@
 							<div class="content">
 								<div class="inner">
 									<date>Fall 2022</date>
-									<h2>Twitter and Mastodon Investigation</h2>
+									<p>
+										<h2>Twitter and Mastodon Investigation</h2>
+										<h5>Yuting Ji, Jeremy Hudson Chan</h5>
+									</p>
 									<p>Analyzed and investigated the aftereffect of Twitter acquisition. We first use an NLP model to conduct sentiment analysis to see why people leave Twitter. Then we use the SIR compartmental model to model Mastodon users. Finally we use the Long Short-Term Memory(LSTM) model to predict Mastodon's future user growth trend.
 									</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="https://github.com/jytjyt05/Twitter-and-Mastodon-Investigation" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -83,10 +95,13 @@
 							<div class="content">
 								<div class="inner">
 									<date>Spring 2022</date>
-									<h2>Teeth Segmentation</h2>
+									<p>
+										<h2>Teeth Segmentation</h2>
+										<h5>Yuting Ji, Robert Smithers, Daniella Zunic</h5>
+									</p>
 									<p>A deep learning pipeline for X-ray teeth instance segmentation with Residual Unet backbone and 90% accuracy</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="https://github.com/jytjyt05/Teeth-Seg" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -97,11 +112,14 @@
 							<div class="content">
 								<div class="inner">
 									<date>Spring 2022</date>
-									<h2>Course Recommendation Mini Program</h2>
+									<p>
+										<h2>Course Recommendation Mini Program</h2>
+										<h5>Yuting Ji</h5>
+									</p>
 									<p>A front end application for offering course rating and recommendation to Chinese international students in Boston College<br><br>
 										Deployed on WeChat ecosystem as a WeChat Mini Program</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="https://github.com/jytjyt05/ChestnutHill-Course-Rec" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -112,10 +130,13 @@
 							<div class="content">
 								<div class="inner">
 									<date>Fall 2021</date>
-									<h2>Auto Investment Portfolio</h2>
+									<p>
+										<h2>Auto Investment Portfolio</h2>
+										<h5>Yuting Ji</h5>
+									</p>
 									<p>A financial analysis program with Tkinter graphical user interface to find the best long and short investing pair in a given industry from the S&P 500 index</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="https://github.com/jytjyt05/Auto-Investment-Portfolio" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
