--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 						<div class="inner">
 							<h1>Yuting Ji</h1>
 							<p>Data Sciencist<br>
-								Deep Learning <a href="https://donglaiw.github.io/">Researcher</a><br>
-								Signed <a href="https://open.spotify.com/track/7zQXmSSXr7qQQtBmFSBw4u?si=e40be09e8a0c45a0">Music Producer</a> 
+								Deep Learning <a href="#one">Researcher</a><br>
+								Signed <a href="#two">Music Producer</a> 
 							</p>
 							<ul class="icons">
 								<li><a href="https://linkedin.com/in/yuting-ji-7a63001b5/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
@@ -52,17 +52,16 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/anatomics_demo.png" alt="" data-position="25% center" /></a>
+							<a href="https://github.com/ajbrookhouse/WSU_PlantBio_ML" class="image"><img src="images/anatomics_demo.png" alt="" data-position="25% center" /></a>
 							<div class="content">
-								<p><h1>Past Projects</h1></p>
+								<!-- <p><h2>Projects</h2></p> -->
 								<div class="inner">
 									<date>July 2023</date>
 									<p>
-										<h2>Anatomics MLT</h2>
-										<h5>Yuting Ji, Aaron Brookhouse</h5>
+										<h3>Anatomics MLT</h3>
 									</p>
-									<p>A deep learning software for cytology instance segmentation tasks<br><br>
-										In collaboration with Professor Michael Knoblauch and Michael Knoblauch Lab members from Washington State University<br><br>
+									<p>A deep learning toolbox for plant cell instance segmentation<br><br>
+										In collaboration with Professor Michael Knoblauch and his lab members from Washington State University<br><br>
 										Expect to publish in <a href="https://www.nature.com/nmeth/">Nature Methods</a><br>
 									</p>
 									<ul class="actions">
@@ -73,15 +72,16 @@
 						</section>
 
 						<section>
-							<a href="#" class="image"><img src="images/twitter_demo.jpeg" alt="" data-position="top center" /></a>
+							<a href="https://github.com/jytjyt05/Twitter-and-Mastodon-Investigation" class="image"><img src="images/twitter.jpg" alt="" data-position="right center"/></a>
 							<div class="content">
 								<div class="inner">
 									<date>Fall 2022</date>
 									<p>
-										<h2>Twitter and Mastodon Investigation</h2>
-										<h5>Yuting Ji, Jeremy Hudson Chan</h5>
+										<h3>Twitter and Mastodon Investigation</h3>
 									</p>
-									<p>Analyzed and investigated the aftereffect of Twitter acquisition. We first use an NLP model to conduct sentiment analysis to see why people leave Twitter. Then we use the SIR compartmental model to model Mastodon users. Finally we use the Long Short-Term Memory(LSTM) model to predict Mastodon's future user growth trend.
+									<p>Conducted sentiment analysis to see why people leave Twitter <br><br>
+										Modeled Mastodon users through SIR compartmental model<br><br>
+										Implemented a Long Short-Term Memory(LSTM) model to predict Mastodon's future user growth trend
 									</p>
 									<ul class="actions">
 										<li><a href="https://github.com/jytjyt05/Twitter-and-Mastodon-Investigation" class="button">Learn more</a></li>
@@ -91,15 +91,16 @@
 						</section>
 
 						<section>
-							<a href="#" class="image"><img src="images/teethseg_demo.png" alt="" data-position="center center" /></a>
+							<a href="https://github.com/jytjyt05/Teeth-Seg" class="image"><img src="images/teethseg_demo.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<date>Spring 2022</date>
 									<p>
-										<h2>Teeth Segmentation</h2>
-										<h5>Yuting Ji, Robert Smithers, Daniella Zunic</h5>
+										<h3>Teeth Segmentation</h3>
 									</p>
-									<p>A deep learning pipeline for X-ray teeth instance segmentation with Residual Unet backbone and 90% accuracy</p>
+									<p>A deep learning pipeline for X-ray teeth instance segmentation<br><br>
+										Residual Unet with ~90% accuracy
+									</p>
 									<ul class="actions">
 										<li><a href="https://github.com/jytjyt05/Teeth-Seg" class="button">Learn more</a></li>
 									</ul>
@@ -108,16 +109,16 @@
 						</section>
 
 						<section>
-							<a href="#" class="image"><img src="images/miniprogram_demo3.png" alt="" data-position="left center" /></a>
+							<a href="https://github.com/jytjyt05/ChestnutHill-Course-Rec" class="image"><img src="images/miniprogram_demo3.png" alt="" data-position="left center" /></a>
 							<div class="content">
 								<div class="inner">
 									<date>Spring 2022</date>
 									<p>
-										<h2>Course Recommendation Mini Program</h2>
-										<h5>Yuting Ji</h5>
+										<h3>Course Recommendation Mini Program</h3>
 									</p>
-									<p>A front end application for offering course rating and recommendation to Chinese international students in Boston College<br><br>
-										Deployed on WeChat ecosystem as a WeChat Mini Program</p>
+									<p>A front-end application deployed as WeChat mini program<br><br>
+										Provides course rating and recommendation to Chinese international students in Boston College<br><br>
+									</p>
 									<ul class="actions">
 										<li><a href="https://github.com/jytjyt05/ChestnutHill-Course-Rec" class="button">Learn more</a></li>
 									</ul>
@@ -126,15 +127,15 @@
 						</section>
 
 						<section>
-							<a href="#" class="image"><img src="images/autoinvest_demo.jpg" alt="" data-position="center center" /></a>
+							<a href="https://github.com/jytjyt05/Auto-Investment-Portfolio" class="image"><img src="images/autoinvest_demo1.jpeg" alt="" data-position="center top" /></a>
 							<div class="content">
 								<div class="inner">
 									<date>Fall 2021</date>
 									<p>
-										<h2>Auto Investment Portfolio</h2>
-										<h5>Yuting Ji</h5>
+										<h3>Auto Investment Portfolio</h3>
 									</p>
-									<p>A financial analysis program with Tkinter graphical user interface to find the best long and short investing pair in a given industry from the S&P 500 index</p>
+									<p>A financial analysis program with Tkinter graphical user interface <br><br>
+										Can find the best long and short investing pair in a given industry from the S&P 500 index</p>
 									<ul class="actions">
 										<li><a href="https://github.com/jytjyt05/Auto-Investment-Portfolio" class="button">Learn more</a></li>
 									</ul>
@@ -146,10 +147,12 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>Past Music</h2><br>
+							<h2>Music</h2><br>
 							<p>
-								<a href="https://music.163.com/#/artist?id=12227403" class="button medium">Netease Cloud Music  (China)</a> <br><br>
-								<a href="https://open.spotify.com/track/7zQXmSSXr7qQQtBmFSBw4u?si=e40be09e8a0c45a0" class="button medium">Spotify  (International)</a> 
+								<h3>Netease Cloud Music (China)</h3><a href="https://music.163.com/#/artist?id=12227403" class="button medium">Listen on netease</a>
+							</p>
+							<p>
+								<h3>Spotify (International)</h3><a href="https://open.spotify.com/track/7zQXmSSXr7qQQtBmFSBw4u?si=e40be09e8a0c45a0" class="button medium">Listen on spotify</a> 
 							</p> 
 							<!-- <div class="features">
 								<section>
@@ -170,7 +173,7 @@
 					</section> 
 
 				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
+					<section id="three" class="wrapper style3-alt fade-up">
 						<div class="inner">
 							<h2>Contact Me</h2>
 							<p></p>
@@ -200,9 +203,9 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>140 Commonwealth Ave<br />
-											Chestnut Hill, MA 02135<br />
-											USA</span>
+											<span><br />
+											Los Angeles, CA 90024<br />
+											</span>
 										</li>
 										<li>
 											<h3>Email</h3>
