--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Yuting Ji</title>
+		<title>Jerry Ji</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -30,17 +30,16 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Yuting Ji</h1>
-							<p>Data Sciencist<br>
+							<h1>Jerry(Yuting) Ji</h1>
+							<p><br>
 								Deep Learning <a href="#one">Researcher</a><br>
 								Signed <a href="#two">Music Producer</a> 
 							</p>
 							<ul class="icons">
-								<li><a href="https://linkedin.com/in/yuting-ji-7a63001b5/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://linkedin.com/in/jerryji05/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/jytjyt05" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
 							<ul class="actions">
@@ -56,13 +55,13 @@
 							<div class="content">
 								<!-- <p><h2>Projects</h2></p> -->
 								<div class="inner">
-									<date>July 2023</date>
+									<date>Fall 2023</date>
 									<p>
-										<h3>Anatomics MLT</h3>
+										<h3>Anatomics</h3>
 									</p>
-									<p>A deep learning toolbox for plant cell instance segmentation<br><br>
-										In collaboration with Professor Michael Knoblauch and his lab members from Washington State University<br><br>
-										Expect to publish in <a href="https://www.nature.com/nmeth/">Nature Methods</a><br>
+									<p>A deep learning toolbox software for semantic and instance segmentation on electron microscopic cell images<br><br>
+										In collaboration with <a href="https://labs.wsu.edu/knoblauch/">Professor Michael Knoblauch and his lab members</a> from Washington State University<br><br>
+										<!-- Expect to publish in <a href="https://www.nature.com/nmeth/">Nature Methods</a><br> -->
 									</p>
 									<ul class="actions">
 										<li><a href="https://github.com/ajbrookhouse/WSU_PlantBio_ML" class="button">Learn more</a></li>
@@ -72,19 +71,19 @@
 						</section>
 
 						<section>
-							<a href="https://github.com/jytjyt05/Twitter-and-Mastodon-Investigation" class="image"><img src="images/twitter.jpg" alt="" data-position="right center"/></a>
+							<a href="https://github.com/jytjyt05/Sentiment-Analysis-and-User-Prediction-of-Mastodon" class="image"><img src="images/twitter.jpg" alt="" data-position="right center"/></a>
 							<div class="content">
 								<div class="inner">
 									<date>Fall 2022</date>
 									<p>
-										<h3>Twitter and Mastodon Investigation</h3>
+										<h3>Sentiment Analysis and User Prediction of Mastodon</h3>
 									</p>
-									<p>Conducted sentiment analysis to see why people leave Twitter <br><br>
+									<p> <br><br>
 										Modeled Mastodon users through SIR compartmental model<br><br>
 										Implemented a Long Short-Term Memory(LSTM) model to predict Mastodon's future user growth trend
 									</p>
 									<ul class="actions">
-										<li><a href="https://github.com/jytjyt05/Twitter-and-Mastodon-Investigation" class="button">Learn more</a></li>
+										<li><a href="https://github.com/jytjyt05/Sentiment-Analysis-and-User-Prediction-of-Mastodon" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -127,17 +126,17 @@
 						</section>
 
 						<section>
-							<a href="https://github.com/jytjyt05/Auto-Investment-Portfolio" class="image"><img src="images/autoinvest_demo1.jpeg" alt="" data-position="center top" /></a>
+							<a href="https://github.com/jytjyt05/Investment-Portfolio-Rec" class="image"><img src="images/autoinvest_demo1.jpeg" alt="" data-position="center top" /></a>
 							<div class="content">
 								<div class="inner">
 									<date>Fall 2021</date>
 									<p>
-										<h3>Auto Investment Portfolio</h3>
+										<h3>Investment Portfolio Recommendation App</h3>
 									</p>
 									<p>A financial analysis program with Tkinter graphical user interface <br><br>
 										Can find the best long and short investing pair in a given industry from the S&P 500 index</p>
 									<ul class="actions">
-										<li><a href="https://github.com/jytjyt05/Auto-Investment-Portfolio" class="button">Learn more</a></li>
+										<li><a href="https://github.com/jytjyt05/Investment-Portfolio-Rec" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -203,8 +202,8 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span><br />
-											Los Angeles, CA 90024<br />
+											<span>
+											Los Angeles, CA 90024
 											</span>
 										</li>
 										<li>
@@ -220,7 +219,7 @@
 											<ul class="icons">
 												<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
 												<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
-												<li><a href="https://linkedin.com/in/yuting-ji-7a63001b5/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://linkedin.com/in/jerryji05/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 												<li><a href="https://github.com/jytjyt05" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 											</ul>
